lustre/osc/osc_cache.c
@@ -3140,7 +3140,6 @@ bool osc_page_gang_lookup(const struct lu_env *env, struct cl_io *io,
 			cl_page_get(page);
 			pvec[j++] = ops;
 		}
-		++idx;
 
 		/*
 		 * Here a delicate locking dance is performed. Current thread
@@ -3182,6 +3181,7 @@ bool osc_page_gang_lookup(const struct lu_env *env, struct cl_io *io,
 		if (need_resched())
 			cond_resched();
 
+		++idx;
 		spin_lock(&osc->oo_tree_lock);
 		tree_lock = true;
 	}
